added community of service

--- a/resources-for-researchers/community-of-service-alt-instructions.html
+++ b/resources-for-researchers/community-of-service-alt-instructions.html
@@ -10,7 +10,7 @@
 <meta name="author" content="IT Services, Office of the VP for Research">
 <link rel="icon" href="../all-vpr-web/img/favicon.ico">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Discovery Video Showcase Submissions</title>
+<title>Community of Service Video Submissions</title>
 <!-- InstanceEndEditable -->
 <!--
 	<script src="//use.typekit.net/tgy5tlj.js"></script>
@@ -108,11 +108,14 @@
     </div>
     <div class="col-sm-8"><!-- InstanceBeginEditable name="PageTitleTop" -->
       <div class="main-content">
-        <h2 class="vpr-page-title">Discovery Video Showcase</h2>
-        <p>We invite researchers of all levels to create videos about their research that is intended for general audience on a wide-range of topics covering the spectrum of research and scholarship at UVA. Here are the submissions so far.</p>
-        <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLlf42T0Kv6SpgaGoz6iLOzUfW8CoYgvMq" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <h4>Videos depicting research and scholarship from all topics welcome.</h4>
-      </div>
+        <h2 class="vpr-page-title">Community of Service</h2>
+        <h4>Advanced Instructions</h4>
+        <p>We are asking our student service organizations to produce a short video that clearly communicates their mission and their work. Here are the submissions so far.</p>
+        <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLlf42T0Kv6SrDGdvbGM1cHE9zYFWjWzzG" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <p>If you don't have your own youtube channel and don't intend to make one please follow <a href="community-of-service.html"> the basic instructions found here.</a> The instructions lower down on this page are for those that want their video hosted on their own independent youtube channel.</p>
+        <a href="community-of-service.html">
+        <h3 class="bbb">Back to the Basic Instructions</h3>
+        </a> </div>
       <!-- InstanceEndEditable --></div>
   </div>
 </div>
@@ -127,63 +130,35 @@
             work.</li>
           <li>A wide range of modalities are allowable from a simple narration of the
             work in front of a camera, a PowerPoint presentation with audio, a video
-            production showing results or important artifacts from the research or
+            production showing results or important artifacts from the community service or
             work in progress, and others that the presenters can imagine to
             effectively communicate their work to general audience.</li>
-          <li>Top three will be highlighted at the Discovery event October 19, 2018.</li>
-          <li>There is no “judging”. This is simply a forum for researchers to showcase their research and receive feedback on how well the message is received, understood, and liked by general audience through direct feedback about your video and the likes and web engagement.</li>
-          <li>All videos must be submitted by Friday, October 12, 2018 to be considered
-            for the event.</li>
-          <li>For more information visit the <a href="http://inauguration.virginia.edu/profiles-discovery">profiles of discovery site</a> or email Cheryl Wagner Cheryl-vpr@Virginia.edu</li>
+          <li>There is no “judging”. This is simply a forum for student organizations to showcase their service efforts and receive feedback on how well the message is received, understood, and liked by general audience.</li>
+          <li>For more information visit the <a href="http://inauguration.virginia.edu/celebration-service">Community of Service site</a>.</li>
         </ul>
       </div>
     </div>
     <div class="row">
       <div class="col">
-        <h3>How to submit your video</h3>
-        <p>Overview: You're going to need to upload the video to youtube following our instructions and then share your unlisted video with us so we can reupload it to the <a href="https://www.youtube.com/channel/UCr8T8WcY1FzhLNng4HUBAYQ">Vice President for Research at UVA Youtube Channel</a>.</p>
-        <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/DRdl6uAsGco" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <ol>
-          <li>Create your video and encode it using <a href="https://support.google.com/youtube/answer/1722171?hl=en">the recommended youtube upload settings.</a></li>
-          <li>Log in to a youtube account and then navigate to <a href="https://www.youtube.com/upload">the youtube upload page.</a> (UVA student gmail accounts will not let you upload)<img class="center" src="../all-vpr-web/img/yt12.png" alt="upload video"></li>
-          <li>Upload your video as unlisted so it isn't public to the web and start editing the basic info.</li>
-          <li>Basic Info Tab:
-            <ul>
-              <li>Title - Give your video a short descriptive title. (ex. Bioinformatics and Genomics Research at UVA)</li>
-              <li>Description - Add a detailed description of the contents of your video expressing what you want to convey with your video. Here is where you would give credit to the video makers and the people in the video. You can also add links to your website or social media.</li>
-              <li>Tags - Enter at least 5 tags describing your video (ex. UVA, research, bioinformatics). We will take these tags and attach them to the video when we re-upload your video. If you enter them in the tags box, we won't be able to add your tags.</li>
-              <li>Visibility - Set the visibility to unlisted so the public can't find it but we can.</li>
-            </ul>
-            <img class="center" src="../all-vpr-web/img/yt11.png" alt="upload video"> </li>
-          <li>Publish your video and send us your video link.</li>
-        </ol>
-        <iframe class="center" src="https://docs.google.com/forms/d/e/1FAIpQLScMy-F01DndfVsob6Yg9wjmza2OKhNip2PBboRwoaBMWno2oQ/viewform?embedded=true" width="640" height="1149" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-        <h3>Congrats! You're done. We'll add your video to the showcase.</h3>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="container-fluid">
-  <div class="main-content">
-    <div class="row dotted">
-      <div class="col">
-        <h2>Optional - Looking for more control over your video submission?</h2>
-        <p>Do you have your own youtube channel you'd like to post the video on? Do you want to improve your video with advanced youtube features like annotations, end cards, and subtitles? If so, please contact us by email or by using the form below. Taking advandtage of these additional features will require your research group to have their own youtube account and abide by some UVA rules. If this option interests your group, here are some of the pros and cons of submitting your video this way.</p>
+        <h2>Looking for more control over your video submission?</h2>
+        <p>Do you have your own youtube channel you'd like to post the video on? Do you want to improve your video with advanced youtube features like annotations, end cards, and subtitles? If so, please contact us by email or by using the form below. Taking advandtage of these additional features will require your organization have their own youtube account and abide by some UVA rules. If this option interests your group, here are some of the pros and cons of submitting your video this way.</p>
         <h5>Pros</h5>
         <ul>
-          <li>Improve your showcase video with extra youtube features - You can add annotations, end cards, subtitles, links to your group's website and other annimations to improve your video.</li>
+          <li>Improve your video with extra youtube features - You can add annotations, end cards, subtitles, links to your group's website and other annimations to improve your video.</li>
           <li>Build your own youtube presense - The video description will display as your own youtube channel so you can direct traffic and interest to your group instead of the video showing as posted by the <a href="https://www.youtube.com/channel/UCr8T8WcY1FzhLNng4HUBAYQ">Vice President for Research at UVA Youtube Channel</a> You can post future videos to the channel you create and grow your own online presence. All views your video gets as a result of this showcase will be attributed to your channel which will increase your channels prominense in search results.</li>
           <li>You will be able to better credit the creators of the video on your channel.</li>
         </ul>
         <h5>Cons</h5>
         <ul>
           <li>Extra work - Setting up your own channel will require some additional work on your part.</li>
-          <li>Channel must be UVA/research branded - You can't post your video to your personal youtube channel. We don't want you uploading the showcase video to your personal youtube channel where if people click on the channel they will see your playlists of your favorite cat videos or music. The channel will have to be connected to your reserach and uva only. Take a look at the <a href="https://www.youtube.com/user/UniversityofVirginia">UVA youtube channel</a> and the <a href="https://www.youtube.com/channel/UCr8T8WcY1FzhLNng4HUBAYQ">Vice President for Research at UVA youtube channel</a> for examples of what is required of UVA branding. It's essentially just a UVA image as your profile image and a UVA or research related picture in your channel art. Most of what we're asking is that you don't have unrelated content cluttering your channel</li>
+          <li>Channel must be UVA branded - You can't post your video to your personal youtube channel. We don't want you uploading the showcase video to your personal youtube channel where if people click on the channel they will see your playlists of your favorite cat videos or music. The channel will have to be connected to your organization and uva only. Take a look at the <a href="https://www.youtube.com/user/UniversityofVirginia">UVA youtube channel</a> and the <a href="https://www.youtube.com/channel/UCr8T8WcY1FzhLNng4HUBAYQ">Vice President for Research at UVA youtube channel</a> for examples of what is required of UVA branding. It's essentially just a UVA image as your profile image and a UVA or research related picture in your channel art. Most of what we're asking is that you don't have unrelated content cluttering your channel</li>
         </ul>
-        <p>If you decide that you want to post the vidoe on your own channel please follow <a href="discoveryvideoshowcase-alt-instructions.html">these separate instructions.</a></p>
-        <a href="discoveryvideoshowcase-alt-instructions.html">
-        <h3 class="bbb">Optional instructions for uploading to your own channel</h3>
-        </a> </div>
+        <h3>How to submit your video hosted on your own youtube channel</h3>
+        <p>Please please upload your video and then use <a href="https://www.youtube.com/playlist?list=PLlf42T0Kv6SpgaGoz6iLOzUfW8CoYgvMq&jct=vVjvwmVE3PPPh_VDpoz-LNfd6ldwWA">this collaboration link</a> to add the community of service video playlist to your channel. Then you will be able to add your video to the playlist. Please email us at <a href="mailto:uvaresearchvp@gmail.com">uvaresearchvp@gmail.com</a> and use the form below to let us know that you've added your video. You can check that you've done it right by checking the youtube playlist at the top of this page or by <a href="https://www.youtube.com/playlist?list=PLlf42T0Kv6SrDGdvbGM1cHE9zYFWjWzzG&disable_polymer=true">visiting the playlist directly </a>and looking for your video.</p>
+        <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/ePaCcm5U1rI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe class="center" src="https://docs.google.com/forms/d/e/1FAIpQLScQ1dbLFSBhZZO5RPjuz6MRnk4166EHLnd-3a-3Dj9u6Ba0xw/viewform?embedded=true" width="640" height="1351" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <h5>Example Upload settings</h5>
+        <img class="center" src="../all-vpr-web/img/yt3.png" alt="upload video"> <img class="center" src="../all-vpr-web/img/yt4.png" alt="upload video"> <img class="center" src="../all-vpr-web/img/yt5.png" alt="upload video"> </div>
     </div>
   </div>
 </div>
