--- a/resources-for-researchers/index.html
+++ b/resources-for-researchers/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en"><!-- InstanceBegin template="/Templates/home-template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+<!-- InstanceBegin template="/Templates/home-template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,7 +34,7 @@
     <![endif]-->
 <!--    Access Analytics Script-->
 <script>var access_analytics={base_url:"https://analytics.ssbbartgroup.com/api/",instance_id:"AA-58bdcc11cee35"};(function(a,b,c){var d=a.createElement(b);a=a.getElementsByTagName(b)[0];d.src=c.base_url+"access.js?o="+c.instance_id+"&v=2";a.parentNode.insertBefore(d,a)})(document,"script",access_analytics);</script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-77273128-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -86,21 +87,21 @@
       <div class="nav">
         <ul class="sidebar-nav">
           <!-- InstanceBeginEditable name="SideNav" -->
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../contact.html">Contact & Directions</a></h2>
-            </li>
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../leadership.html">Leadership</a></h2>
-            </li>
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../staff.html">Staff</a></h2>
-            </li>
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../news.html">News</a></h2>
-            </li>
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a></h2>
-            </li>
+          <li class="nav-item">
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../contact.html">Contact & Directions</a></h2>
+          </li>
+          <li class="nav-item">
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../leadership.html">Leadership</a></h2>
+          </li>
+          <li class="nav-item">
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../staff.html">Staff</a></h2>
+          </li>
+          <li class="nav-item">
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../news.html">News</a></h2>
+          </li>
+          <li class="nav-item">
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a></h2>
+          </li>
           <!-- InstanceEndEditable -->
         </ul>
       </div>
@@ -109,19 +110,19 @@
       <div class="main-content">
         <h2 class="vpr-page-title">Resources for Researchers</h2>
         <p>Below is a collection of links to help aid you in developing funding and infrastructure for your research.</p>
-            <ul>
-              <li><a href="../centers/index.html"> Institutes & Centers </a></li>
-              <li><a href="http://www.vpit.virginia.edu/"> IT & Computing Resources </a></li>
-              <li><a href="research-development.html"> Research Development </a></li>
-              <li><a href="http://economicdevelopment.virginia.edu/"> Strategic Corporate Partners </a></li>
-              <li><a href="http://sif.virginia.edu/"> Strategic Investment Fund </a></li>
-              <li><a href="http://gradstudies.virginia.edu/"> Graduate & Postdoctoral Affairs </a></li>
-              <li><a href="faculty-onboarding.html"> New Faculty Onboarding </a></li>
-              <li><a href="http://uvapolicy.virginia.edu/"> Policy Directory </a></li>
-              <li><a href="http://sponsoredprograms.virginia.edu/">Sponsored Programs</a></li>
-              <li><a href="../Compliance/index.html">Research Compliance</a></li>
-              <li><a href="../all-vpr-web/assets/UVA-FA-Cost-flyer.pdf">Explanation of Facilities & Admin Costs</a></li>
-            </ul>
+        <ul>
+          <li><a href="../centers/index.html"> Institutes & Centers </a></li>
+          <li><a href="http://www.vpit.virginia.edu/"> IT & Computing Resources </a></li>
+          <li><a href="research-development.html"> Research Development </a></li>
+          <li><a href="http://economicdevelopment.virginia.edu/"> Strategic Corporate Partners </a></li>
+          <li><a href="http://sif.virginia.edu/"> Strategic Investment Fund </a></li>
+          <li><a href="http://gradstudies.virginia.edu/"> Graduate & Postdoctoral Affairs </a></li>
+          <li><a href="faculty-onboarding.html"> New Faculty Onboarding </a></li>
+          <li><a href="http://uvapolicy.virginia.edu/"> Policy Directory </a></li>
+          <li><a href="http://sponsoredprograms.virginia.edu/">Sponsored Programs</a></li>
+          <li><a href="../Compliance/index.html">Research Compliance</a></li>
+          <li><a href="../all-vpr-web/assets/UVA-FA-Cost-flyer.pdf">Explanation of Facilities & Admin Costs</a></li>
+        </ul>
       </div>
       <!-- InstanceEndEditable --></div>
   </div>
@@ -129,6 +130,14 @@
 <!-- InstanceBeginEditable name="CenterContent" -->
 <div class="container-fluid">
   <div class="main-content">
+    <div class="row dotted">
+      <div class="col">
+        <h4>Discovery Video Showcase</h4>
+        <p> We invite researchers of all levels to create videos about their research that is intended for general audience on a wide-range of topics covering the spectrum of research and scholarship at UVA. The top three submissions will be highlighted at the Discovery event October 19, 2018.</p>
+        <a href="discoveryvideoshowcase.html">
+        <h3 class="bbb">Learn more about entering the Discovery Video Showcase</h3>
+        </a> </div>
+    </div>
     <div class="row dotted">
       <div class="col flex-wrapper flex-wrapper-fourths"> <a href="http://www.virginia.edu/vpr/centers/index.html" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/sponsored_research_2017_0034_tiomothy-swope-116695-unsplash.jpg">
         <div class="description">
@@ -294,4 +303,5 @@
   </div>
 </footer>
 </body>
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+</html>
