--- a/resources-for-researchers/discoveryvideoshowcase-alt-instructions.html
+++ b/resources-for-researchers/discoveryvideoshowcase-alt-instructions.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en"><!-- InstanceBegin template="/Templates/home-template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+<!-- InstanceBegin template="/Templates/home-template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,7 +34,7 @@
     <![endif]-->
 <!--    Access Analytics Script-->
 <script>var access_analytics={base_url:"https://analytics.ssbbartgroup.com/api/",instance_id:"AA-58bdcc11cee35"};(function(a,b,c){var d=a.createElement(b);a=a.getElementsByTagName(b)[0];d.src=c.base_url+"access.js?o="+c.instance_id+"&v=2";a.parentNode.insertBefore(d,a)})(document,"script",access_analytics);</script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-77273128-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -86,35 +87,36 @@
       <div class="nav">
         <ul class="sidebar-nav">
           <!-- InstanceBeginEditable name="SideNav" -->
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../contact.html">Contact & Directions</a></h2>
-            </li>
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../leadership.html">Leadership</a></h2>
-            </li>
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../staff.html">Staff</a></h2>
-            </li>
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../news.html">News</a></h2>
-            </li>
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a></h2>
-            </li>
+          <li class="nav-item">
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../contact.html">Contact & Directions</a></h2>
+          </li>
+          <li class="nav-item">
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../leadership.html">Leadership</a></h2>
+          </li>
+          <li class="nav-item">
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../staff.html">Staff</a></h2>
+          </li>
+          <li class="nav-item">
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../news.html">News</a></h2>
+          </li>
+          <li class="nav-item">
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a></h2>
+          </li>
           <!-- InstanceEndEditable -->
         </ul>
       </div>
     </div>
     <div class="col-sm-8"><!-- InstanceBeginEditable name="PageTitleTop" -->
       <div class="main-content">
-        <h2 class="vpr-page-title">Discovery Showcase</h2>
+        <h2 class="vpr-page-title">Discovery Video Showcase</h2>
         <h4>Advanced Instructions</h4>
         <p>We invite researchers of all levels to create videos about their research that is intended for general audience on a wide-range of topics covering the spectrum of research and scholarship at UVA. Here are the submissions so far.</p>
         <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLlf42T0Kv6SpgaGoz6iLOzUfW8CoYgvMq" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <h4>Videos depicting research and scholarship from all areas and disciplines welcome.</h4>
         <p>If you don't have your own youtube channel and don't intend to make one please follow <a href="discoveryvideoshowcase.html"> the basic instructions found here.</a> The instructions on this page are for those that want their video hosted on their own independent youtube channel.</p>
-        <a href="discoveryvideoshowcase.html"><h3 class="bbb">Basic Instructions</h3></a>
-      </div> 
+        <a href="discoveryvideoshowcase.html">
+        <h3 class="bbb">Back to the Basic Instructions</h3>
+        </a> </div>
       <!-- InstanceEndEditable --></div>
   </div>
 </div>
@@ -136,14 +138,14 @@
           <li>There is no “judging”. This is simply a forum for researchers to showcase their research and receive feedback on how well the message is received, understood, and liked by general audience through direct feedback about your video and the likes and web engagement.</li>
           <li>All videos must be submitted by Friday, October 12, 2018 to be considered
             for the event.</li>
-          <li>For more information visit the <a href="http://inauguration.virginia.edu/profilesdiscovery">profiles of discovery site</a> or email Cheryl Wagner Cheryl-vpr@Virginia.edu</li>
+          <li>For more information visit the <a href="http://inauguration.virginia.edu/profiles-discovery">profiles of discovery site</a> or email Cheryl Wagner Cheryl-vpr@Virginia.edu</li>
         </ul>
       </div>
     </div>
     <div class="row">
       <div class="col">
         <h2>Looking for more control over your video submission?</h2>
-        <p>Do you have your own youtube channel you'd like to post the video on? Do you want to improve your video with advanced youtube features like annotations, end cards, and subtitles? If so, please contact us by email or by using the form below. Taking advandtage of these additional features will require your research group to have their own youtube account and abide by some UVA rules. If this option interests your group, here are some of the pros and cons of submitting your video this way.</p> 
+        <p>Do you have your own youtube channel you'd like to post the video on? Do you want to improve your video with advanced youtube features like annotations, end cards, and subtitles? If so, please contact us by email or by using the form below. Taking advandtage of these additional features will require your research group to have their own youtube account and abide by some UVA rules. If this option interests your group, here are some of the pros and cons of submitting your video this way.</p>
         <h5>Pros</h5>
         <ul>
           <li>Improve your showcase video with extra youtube features - You can add annotations, end cards, subtitles, links to your group's website and other annimations to improve your video.</li>
@@ -152,17 +154,15 @@
         </ul>
         <h5>Cons</h5>
         <ul>
-          <li>Extra work - Setting up your own channel will require some additional work on your part.</li> 
+          <li>Extra work - Setting up your own channel will require some additional work on your part.</li>
           <li>Channel must be UVA/research branded - You can't post your video to your personal youtube channel. We don't want you uploading the showcase video to your personal youtube channel where if people click on the channel they will see your playlists of your favorite cat videos or music. The channel will have to be connected to your reserach and uva only. Take a look at the <a href="https://www.youtube.com/user/UniversityofVirginia">UVA youtube channel</a> and the <a href="https://www.youtube.com/channel/UCr8T8WcY1FzhLNng4HUBAYQ">Vice President for Research at UVA youtube channel</a> for examples of what is required of UVA branding. It's essentially just a UVA image as your profile image and a UVA or research related picture in your channel art. Most of what we're asking is that you don't have unrelated content cluttering your channel</li>
         </ul>
-      <h3>How to submit your video hosted on your own youtube channel</h3>
+        <h3>How to submit your video hosted on your own youtube channel</h3>
         <p>Please please upload your video and then use <a href="https://www.youtube.com/playlist?list=PLlf42T0Kv6SpgaGoz6iLOzUfW8CoYgvMq&jct=PVDMPx0fY1U0eFg-nEcB6Ycs9LhTqg">this collaboration link</a> to add the showcase playlist to your channel. Then you will be able to add your video to the playlist. Please email us at <a href="mailto:uvaresearchvp@gmail.com">uvaresearchvp@gmail.com</a> and use the form below to let us know that you've added your video. You can check that you've done it right by checking the youtube playlist at the top of this page or by <a href="https://www.youtube.com/watch?list=PLlf42T0Kv6SpgaGoz6iLOzUfW8CoYgvMq&v=fyADveq9izQ">visiting the playlist directly </a>and looking for your video.</p>
+        <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/DRdl6uAsGco?start=179" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <iframe class="center" src="https://docs.google.com/forms/d/e/1FAIpQLSfJXcHWK5M0Lk-Bh_cXcEujBsIZDfdsyFZWQbgfNP8ZCNvtAA/viewform?embedded=true" width="640" height="1306" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
         <h5>Example Upload settings</h5>
-        <img class="center" src="../all-vpr-web/img/yt3.png" alt="upload video">
-        <img class="center" src="../all-vpr-web/img/yt4.png" alt="upload video">
-        <img class="center" src="../all-vpr-web/img/yt5.png" alt="upload video">
-      </div>
+        <img class="center" src="../all-vpr-web/img/yt3.png" alt="upload video"> <img class="center" src="../all-vpr-web/img/yt4.png" alt="upload video"> <img class="center" src="../all-vpr-web/img/yt5.png" alt="upload video"> </div>
     </div>
   </div>
 </div>
@@ -224,4 +224,5 @@
   </div>
 </footer>
 </body>
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+</html>
