changed name of community of service pages

--- a/resources-for-researchers/community-of-service.html
+++ b/resources-for-researchers/community-of-service.html
@@ -10,7 +10,7 @@
 <meta name="author" content="IT Services, Office of the VP for Research">
 <link rel="icon" href="../all-vpr-web/img/favicon.ico">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Community of Service Video Submissions</title>
+<title>Celebration of Service Video Submissions</title>
 <!-- InstanceEndEditable -->
 <!--
 	<script src="//use.typekit.net/tgy5tlj.js"></script>
@@ -108,7 +108,7 @@
     </div>
     <div class="col-sm-8"><!-- InstanceBeginEditable name="PageTitleTop" -->
       <div class="main-content">
-        <h2 class="vpr-page-title">Community of Service</h2>
+        <h2 class="vpr-page-title">Celebration of Service</h2>
         <h4>We are asking our student service organizations to produce a short video that clearly communicates their mission and their work. Here are the submissions so far.</h4>
         <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLlf42T0Kv6SrDGdvbGM1cHE9zYFWjWzzG" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       </div>
@@ -130,7 +130,7 @@
             work in progress, and others that the presenters can imagine to
             effectively communicate their work to general audience.</li>
           <li>There is no “judging”. This is simply a forum for student organizations to showcase their service efforts and receive feedback on how well the message is received, understood, and liked by general audience.</li>
-          <li>For more information visit the <a href="http://inauguration.virginia.edu/celebration-service">Community of Service site</a>.</li>
+          <li>For more information visit the <a href="http://inauguration.virginia.edu/celebration-service">Celebration of Service site</a>.</li>
         </ul>
       </div>
     </div>
@@ -154,7 +154,7 @@
           <li>Publish your video and send us your video link.</li>
         </ol>
         <iframe class="center" src="https://docs.google.com/forms/d/e/1FAIpQLScV7B4K-2J-CjVXKBjNkbyhCKcjTNVbaNFGLwerqcBxI4shbw/viewform?embedded=true" width="640" height="1149" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-        <h3>Congrats! You're done. We'll add your video to the Community of Service showcase.</h3>
+        <h3>Congrats! You're done. We'll add your video to the Celebration of Service showcase.</h3>
       </div>
     </div>
   </div>
