--- a/resources-for-researchers/community-of-service-alt-instructions.html
+++ b/resources-for-researchers/community-of-service-alt-instructions.html
@@ -10,7 +10,7 @@
 <meta name="author" content="IT Services, Office of the VP for Research">
 <link rel="icon" href="../all-vpr-web/img/favicon.ico">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Community of Service Video Submissions</title>
+<title>Celebration of Service Video Submissions</title>
 <!-- InstanceEndEditable -->
 <!--
 	<script src="//use.typekit.net/tgy5tlj.js"></script>
@@ -108,7 +108,7 @@
     </div>
     <div class="col-sm-8"><!-- InstanceBeginEditable name="PageTitleTop" -->
       <div class="main-content">
-        <h2 class="vpr-page-title">Community of Service</h2>
+        <h2 class="vpr-page-title">Celebration of Service</h2>
         <h4>Advanced Instructions</h4>
         <p>We are asking our student service organizations to produce a short video that clearly communicates their mission and their work. Here are the submissions so far.</p>
         <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLlf42T0Kv6SrDGdvbGM1cHE9zYFWjWzzG" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -134,7 +134,7 @@
             work in progress, and others that the presenters can imagine to
             effectively communicate their work to general audience.</li>
           <li>There is no “judging”. This is simply a forum for student organizations to showcase their service efforts and receive feedback on how well the message is received, understood, and liked by general audience.</li>
-          <li>For more information visit the <a href="http://inauguration.virginia.edu/celebration-service">Community of Service site</a>.</li>
+          <li>For more information visit the <a href="http://inauguration.virginia.edu/celebration-service">Celebration of Service site</a>.</li>
         </ul>
       </div>
     </div>
@@ -154,7 +154,7 @@
           <li>Channel must be UVA branded - You can't post your video to your personal youtube channel. We don't want you uploading the showcase video to your personal youtube channel where if people click on the channel they will see your playlists of your favorite cat videos or music. The channel will have to be connected to your organization and uva only. Take a look at the <a href="https://www.youtube.com/user/UniversityofVirginia">UVA youtube channel</a> and the <a href="https://www.youtube.com/channel/UCr8T8WcY1FzhLNng4HUBAYQ">Vice President for Research at UVA youtube channel</a> for examples of what is required of UVA branding. It's essentially just a UVA image as your profile image and a UVA or research related picture in your channel art. Most of what we're asking is that you don't have unrelated content cluttering your channel</li>
         </ul>
         <h3>How to submit your video hosted on your own youtube channel</h3>
-        <p>Please please upload your video and then use <a href="https://www.youtube.com/playlist?list=PLlf42T0Kv6SpgaGoz6iLOzUfW8CoYgvMq&jct=vVjvwmVE3PPPh_VDpoz-LNfd6ldwWA">this collaboration link</a> to add the community of service video playlist to your channel. Then you will be able to add your video to the playlist. Please email us at <a href="mailto:uvaresearchvp@gmail.com">uvaresearchvp@gmail.com</a> and use the form below to let us know that you've added your video. You can check that you've done it right by checking the youtube playlist at the top of this page or by <a href="https://www.youtube.com/playlist?list=PLlf42T0Kv6SrDGdvbGM1cHE9zYFWjWzzG&disable_polymer=true">visiting the playlist directly </a>and looking for your video.</p>
+        <p>Please please upload your video and then use <a href="https://www.youtube.com/playlist?list=PLlf42T0Kv6SpgaGoz6iLOzUfW8CoYgvMq&jct=vVjvwmVE3PPPh_VDpoz-LNfd6ldwWA">this collaboration link</a> to add the Celebration of Service video playlist to your channel. Then you will be able to add your video to the playlist. Please email us at <a href="mailto:uvaresearchvp@gmail.com">uvaresearchvp@gmail.com</a> and use the form below to let us know that you've added your video. You can check that you've done it right by checking the youtube playlist at the top of this page or by <a href="https://www.youtube.com/playlist?list=PLlf42T0Kv6SrDGdvbGM1cHE9zYFWjWzzG&disable_polymer=true">visiting the playlist directly </a>and looking for your video.</p>
         <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/ePaCcm5U1rI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <iframe class="center" src="https://docs.google.com/forms/d/e/1FAIpQLScQ1dbLFSBhZZO5RPjuz6MRnk4166EHLnd-3a-3Dj9u6Ba0xw/viewform?embedded=true" width="640" height="1351" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
         <h5>Example Upload settings</h5>
