News updated for December

--- a/news.html
+++ b/news.html
@@ -43,7 +43,6 @@
   gtag('config', 'UA-77273128-1');
 </script>
 <!-- InstanceBeginEditable name="head" -->
-   <script src="all-vpr-web/js/news.js"></script>
     <!-- InstanceEndEditable -->
 </head>
 
@@ -140,8 +139,228 @@
   <div id="home-news-title" class="container-fluid ">
     <div class="col dotted"></div>
   </div>
-  <div id="rss_feed"></div>
-  <div id="home-news" class="container home-news"></div>
+  <div id="home-news" class="container home-news">
+  	<div class='row'>
+  		<div class='col-sm-4'>
+  			<a href="https://news.virginia.edu/content/growing-your-intelligence-professor-shares-power-growth-mindset?utm_source=DailyReport&utm_medium=email&utm_campaign=news">
+  				<img class='news-img' src='all-vpr-web/img/brand/sized-3-2/3-2-photos-batch3_0000_yeshi-kangrang-258234.jpg'/>
+			</a>
+		</div>
+		<div class='col-sm-8'><div class='news-title'>
+			<a class='news-link' href='https://news.virginia.edu/content/growing-your-intelligence-professor-shares-power-growth-mindset?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>
+				<h5>Growing Your Intelligence: Professor Shares the Power of ‘Growth Mindset’</h5>
+			</a>
+		</div>
+		<p class='news'>Stephanie Wormington first became interested in education research when she was working in Portland, Oregon schools, including three that lost funding after failing to meet standards outlined in the federal No Child Left Behind law. Seeing some of her students thrive in school despite seemingly insurmountable obstacles
+			<a href='https://news.virginia.edu/content/growing-your-intelligence-professor-shares-power-growth-mindset?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>Read More</a>
+		</p>
+		</div>
+	</div>
+	<div class='row'>
+  		<div class='col-sm-4'>
+  			<a href="https://news.virginia.edu/content/simple-scoring-system-could-help-patients-avoid-diabetes-study-suggests?utm_source=DailyReport&utm_medium=email&utm_campaign=news">
+  				<img class='news-img' src='all-vpr-web/img/brand/sized-3-2/3-2-photos-batch3_0001_william-iven-22449.jpg'/>
+			</a>
+		</div>
+		<div class='col-sm-8'><div class='news-title'>
+			<a class='news-link' href='https://news.virginia.edu/content/simple-scoring-system-could-help-patients-avoid-diabetes-study-suggests?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>
+				<h5>Simple Scoring System Could Help Patients Avoid Diabetes
+</h5>
+			</a>
+		</div>
+		<p class='news'>A simple scoring system can track the reduction in diabetes risk produced by lifestyle changes and medication in people with pre-diabetes, a new study has found. The findings suggest the potential that the tool could be a good way to motivate patients to stick with diet and exercise changes that could save them from developing full-blown diabetes...
+			<a href='https://news.virginia.edu/content/simple-scoring-system-could-help-patients-avoid-diabetes-study-suggests?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>Read More</a>
+		</p>
+		</div>
+	</div>
+	<div class='row'>
+  		<div class='col-sm-4'>
+  			<a href="https://news.virginia.edu/content/study-hiring-female-police-officers-helps-women-report-violence-sexual-assault?utm_source=DailyReport&utm_medium=email&utm_campaign=news">
+  				<img class='news-img' src='all-vpr-web/img/brand/sized-3-2/3-2-photos-batch3_0033_aliis-sinisalu-70581.jpg'/>
+			</a>
+		</div>
+		<div class='col-sm-8'><div class='news-title'>
+			<a class='news-link' href='https://news.virginia.edu/content/study-hiring-female-police-officers-helps-women-report-violence-sexual-assault?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>
+				<h5>Study: Hiring Female Police Officers Helps Women Report Violence, Sexual Assault
+</h5>
+			</a>
+		</div>
+		<p class='news'>Increasing female representation in America’s police forces can both increase reporting of violent crimes against women and decrease domestic violence, according to a new study from University of Virginia economics professor Amalia Miller. Miller and her co-author, Carmit Segal of the University of Zurich, studied the impact of female police officers from the late 1970s to the early 1990s, when police departments began hiring more women or, in some cases, were forced to hire more women after...
+			<a href='https://news.virginia.edu/content/study-hiring-female-police-officers-helps-women-report-violence-sexual-assault?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>Read More</a>
+		</p>
+		</div>
+	</div>
+	<div class='row'>
+  		<div class='col-sm-4'>
+  			<a href="https://news.virginia.edu/content/study-frail-seniors-going-without-desperately-needed-home-health-care?utm_source=DailyReport&utm_medium=email&utm_campaign=news">
+  				<img class='news-img' src='all-vpr-web/img/panu.header.jpg'/>
+			</a>
+		</div>
+		<div class='col-sm-8'><div class='news-title'>
+			<a class='news-link' href='https://news.virginia.edu/content/study-frail-seniors-going-without-desperately-needed-home-health-care?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>
+				<h5>Study: Frail Seniors Going Without Desperately Needed in-home Health Care
+</h5>
+			</a>
+		</div>
+		<p class='news'>There is a tremendous disparity between the need for home-based medical care and the number of frail seniors actually receiving it, a new study finds. In many rural areas, the problem is so great that the researchers label it “remarkable.” “Most homebound seniors have not received medical care at home,”...
+			<a href='https://news.virginia.edu/content/study-frail-seniors-going-without-desperately-needed-home-health-care?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>Read More</a>
+		</p>
+		</div>
+	</div>
+	<div class='row'>
+  		<div class='col-sm-4'>
+  			<a href="https://news.virginia.edu/content/could-ice-spikes-europa-jeopardize-spacecraft-landing-study-suggests-so">
+  				<img class='news-img' src='all-vpr-web/img/brand/sized-3-2/3-2-photos-batch3_0010_pietro-jeng-266017.jpg'/>
+			</a>
+		</div>
+		<div class='col-sm-8'><div class='news-title'>
+			<a class='news-link' href='https://news.virginia.edu/content/could-ice-spikes-europa-jeopardize-spacecraft-landing-study-suggests-so'>
+				<h5>Could Ice Spikes on Europa Jeopardize a Spacecraft Landing? A Study Suggest So
+</h5>
+			</a>
+		</div>
+		<p class='news'>Sometime in the early 2020s, NASA intends to launch a spacecraft that will orbit and possibly even place a lander on Europa, a moon of Jupiter – an object of much interest because it could harbor conditions that are suitable for the development of life. The moon has an icy surface, and astronomers believe...
+			<a href='https://news.virginia.edu/content/could-ice-spikes-europa-jeopardize-spacecraft-landing-study-suggests-so'>Read More</a>
+		</p>
+		</div>
+	</div>
+	<div class='row'>
+  		<div class='col-sm-4'>
+  			<a href="https://www.law.virginia.edu/news/201811/professor%E2%80%99s-new-book-tackles-%E2%80%98problems-and-puzzles%E2%80%99-criminal-law">
+  				<img class='news-img' src='all-vpr-web/img/brand/sized-3-2/3-2-photos-batch3_0002_thomas-martinsen-2443.jpg'/>
+			</a>
+		</div>
+		<div class='col-sm-8'><div class='news-title'>
+			<a class='news-link' href='https://www.law.virginia.edu/news/201811/professor%E2%80%99s-new-book-tackles-%E2%80%98problems-and-puzzles%E2%80%99-criminal-law'>
+				<h5>‘Problems and Puzzles’ in Criminal Law
+</h5>
+			</a>
+		</div>
+		<p class='news'>One of the central ideas in criminal law is that people should be punished because they deserve it, and only as much as they deserve. This view — retributivism — contends that it is wrong to punish people who are innocent and to inflict greater punishment than is proportionate to the offense. Courts and commentators must then still determine what a “just” punishment may be. ... 
+			<a href='https://www.law.virginia.edu/news/201811/professor%E2%80%99s-new-book-tackles-%E2%80%98problems-and-puzzles%E2%80%99-criminal-law'>Read More</a>
+		</p>
+		</div>
+	</div>
+	<div class='row'>
+  		<div class='col-sm-4'>
+  			<a href="https://news.virginia.edu/content/quantum-challenge-uva-quartet-center-efforts-gain-us-edge?utm_source=DailyReport&utm_medium=email&utm_campaign=news">
+  				<img class='news-img' src='all-vpr-web/img/brand/sized-3-2/3-2-photos-batch3_0007_roman-romashov-278702.jpg'/>
+			</a>
+		</div>
+		<div class='col-sm-8'><div class='news-title'>
+			<a class='news-link' href='https://news.virginia.edu/content/quantum-challenge-uva-quartet-center-efforts-gain-us-edge?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>
+				<h5>A Quantum Challenge: UVA Quartet at the Center of Efforts to Gain U.S. Edge
+</h5>
+			</a>
+		</div>
+		<p class='news'>A UVA physics professor and three UVA engineering professors are members of three new multi-disciplinary, multi-university teams that are seeking new understanding of quantum science for the development of practical, extremely high-tech tools – including the long-dreamed-of and sought-after quantum computer. The projects are part of a $31 million National Science Foundation push to fund and inspire transformational quantum research to ...
+			<a href='https://news.virginia.edu/content/quantum-challenge-uva-quartet-center-efforts-gain-us-edge?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>Read More</a>
+		</p>
+		</div>
+	</div>
+	<div class='row'>
+  		<div class='col-sm-4'>
+  			<a href="https://news.virginia.edu/content/uva-makes-surprising-discovery-about-neurons-our-irreplaceable-nerve-cells?utm_source=DailyReport&utm_medium=email&utm_campaign=news">
+  				<img class='news-img' src='all-vpr-web/img/brand/sized-3-2/3-2-photos-batch3_0010_pietro-jeng-266017.jpg'/>
+			</a>
+		</div>
+		<div class='col-sm-8'><div class='news-title'>
+			<a class='news-link' href='https://news.virginia.edu/content/uva-makes-surprising-discovery-about-neurons-our-irreplaceable-nerve-cells?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>
+				<h5>UVA Makes Surprising Discovery About Neurons, Our Irreplaceable Nerve Cells
+</h5>
+			</a>
+		</div>
+		<p class='news'>Meticulous new research from the University of Virginia School of Medicine has changed a well-accepted scientific belief about neurons, the vital nerve cells that allow us to experience the world and record those experiences as memories in our brains. UVA’s new discovery reveals that these unique cells recycle and dispose of...
+			<a href='https://news.virginia.edu/content/uva-makes-surprising-discovery-about-neurons-our-irreplaceable-nerve-cells?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>Read More</a>
+		</p>
+		</div>
+	</div>
+	<div class='row'>
+  		<div class='col-sm-4'>
+  			<a href="https://news.virginia.edu/content/british-playwright-trip-berryville-and-untold-story-jfks-valet?utm_source=fac_staff&utm_medium=email&utm_campaign=illimitable_11-18">
+  				<img class='news-img' src='all-vpr-web/img/brand/sized-3-2/3-2-photos-batch3_0023_glenn-carstens-peters-190592.jpg'/>
+			</a>
+		</div>
+		<div class='col-sm-8'><div class='news-title'>
+			<a class='news-link' href='https://news.virginia.edu/content/british-playwright-trip-berryville-and-untold-story-jfks-valet?utm_source=fac_staff&utm_medium=email&utm_campaign=illimitable_11-18'>
+				<h5>A British Playwright, A Trip to Berryville and the Untold Story of JFK’S Valet
+</h5>
+			</a>
+		</div>
+		<p class='news'>They gathered in a one-room schoolhouse in Berryville, Virginia – four women and one man, all African-American, cming from their nearby retirement home. They were there to tell Barbara Perry and Alfred Reaves IV, researchers at the University of Virginia’s Miller Center, about one of their neighbors, an African-American man who journeyed from Berryville to the highest reaches of President John F. Kennedy’s White House...
+			<a href='https://news.virginia.edu/content/british-playwright-trip-berryville-and-untold-story-jfks-valet?utm_source=fac_staff&utm_medium=email&utm_campaign=illimitable_11-18'>Read More</a>
+		</p>
+		</div>
+	</div>
+	<div class='row'>
+  		<div class='col-sm-4'>
+  			<a href="https://news.virginia.edu/content/what-strangulation-looks?utm_source=DailyReport&utm_medium=email&utm_campaign=news">
+  				<img class='news-img' src='all-vpr-web/img/brand/sized-3-2/3-2-photos-batch3_0031_brent-de-ranter-426248.jpg'/>
+			</a>
+		</div>
+		<div class='col-sm-8'><div class='news-title'>
+			<a class='news-link' href='https://news.virginia.edu/content/what-strangulation-looks?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>
+				<h5>What Strangulation Looks Like
+</h5>
+			</a>
+		</div>
+		<p class='news'>Of the 25 percent of women worldwide who experience abuse, some 13 million are survivors of strangulation. These women are also 7½ times more likely to be murdered by their spouses or partners than abused women who aren’t strangled, so it’s a critical sub-group in need of legal advocacy, said UVA nursing professor Kathryn Laughon, a forensic nurse examiner ...
+			<a href='https://news.virginia.edu/content/what-strangulation-looks?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>Read More</a>
+		</p>
+		</div>
+	</div>
+	<div class='row'>
+  		<div class='col-sm-4'>
+  			<a href="link">
+  				<img class='news-img' src='all-vpr-web/img/brand/sized-3-2/3-2-photos-batch3_0013_lukas-blazek-367945.jpg'/>
+			</a>
+		</div>
+		<div class='col-sm-8'><div class='news-title'>
+			<a class='news-link' href='https://illimitable.virginia.edu/askmore/macular-degeneration/?utm_source=fac_staff&utm_medium=email&utm_campaign=illimitable_11-18'>
+				<h5>Asking More of Medicine
+</h5>
+			</a>
+		</div>
+		<p class='news'>“If macular degeneration were a country, it would be the eighth-most populated nation in the world,” said UVA’s Dr. Jayakrishna Ambati. Put plainly, macular degeneration means hundreds of millions of people are at risk of going blind. Through collaboration, Dr. Ambati and his team found that macular degeneration patients have an excess of Alu, a toxic molecule similar to HIV. Testing antiretrovirals – a drug already approved for the treatment of HIV and AIDS – they discovered an interruption in the progress of macular degeneration ...
+			<a href='https://illimitable.virginia.edu/askmore/macular-degeneration/?utm_source=fac_staff&utm_medium=email&utm_campaign=illimitable_11-18'>Read More</a>
+		</p>
+		</div>
+	</div>
+	<div class='row'>
+  		<div class='col-sm-4'>
+  			<a href="https://phys.org/news/2018-11-cosmic-collisions-sofia-unravels-mysterious.html">
+  				<img class='news-img' src='all-vpr-web/img/brand/sized-3-2/3-2-photos-batch3_0034_alessio-lin-236486.jpg'/>
+			</a>
+		</div>
+		<div class='col-sm-8'><div class='news-title'>
+			<a class='news-link' href='https://phys.org/news/2018-11-cosmic-collisions-sofia-unravels-mysterious.html'>
+				<h5>Cosmic collisions: SOFIA unravels the mysterious formation of star cluster
+</h5>
+			</a>
+		</div>
+		<p class='news'>The sun, like all stars, was born in a giant cold cloud of molecular gas and dust. It may have had dozens or even hundreds of stellar siblings – a star cluster – but these early companions are now scattered throughout our Milky Way galaxy. Although the remnants of this particular creation event have long since dispersed, the process of star birth continues today within our galaxy and beyond...
+			<a href='https://phys.org/news/2018-11-cosmic-collisions-sofia-unravels-mysterious.html'>Read More</a>
+		</p>
+		</div>
+	</div>
+	<div class='row'>
+  		<div class='col-sm-4'>
+  			<a href="https://news.virginia.edu/content/uva-discovers-link-between-cold-severity-and-bacteria-living-your-nose?utm_source=DailyReport&utm_medium=email&utm_campaign=news">
+  				<img class='news-img' src='all-vpr-web/img/brand/sized-3-2/3-2-photos-batch3_0029_christian-kaindl-332935.jpg'/>
+			</a>
+		</div>
+		<div class='col-sm-8'><div class='news-title'>
+			<a class='news-link' href='https://news.virginia.edu/content/uva-discovers-link-between-cold-severity-and-bacteria-living-your-nose?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>
+				<h5>UVA Discovers Link Between Cold Severity and the Bacteria Living in Your Nose
+</h5>
+			</a>
+		</div>
+		<p class='news'>In news with several layers of weird, researchers have determined that the mix of bacteria that live inside your nose – yes, there are organisms living inside your nose – correlates with the type and severity of cold symptoms you develop. For example, people whose noses are rich in Staphylococcus bacteria had more severe nasal symptoms than cold sufferers who have less staph, new research shows....
+			<a href='https://news.virginia.edu/content/uva-discovers-link-between-cold-severity-and-bacteria-living-your-nose?utm_source=DailyReport&utm_medium=email&utm_campaign=news'>Read More</a>
+		</p>
+		</div>
+	</div>
+  </div>
   <!-- End NEWS Setion -->
 </div>
 <div class="container-fluid">
